2011-08-23 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.20.

2011-08-23 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* tlsmthread.c: Update to reflect changes in tlssup.c.
	* tlssup.c: code clean-up.

2011-08-20 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.19.

2011-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/float.h: Modify guard to accomodate CLang.

	Thanks to Ruben Van Boxem for the report.

2011-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* tlssup.c: Remove mingwm10.dll fallback.

2011-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/sys/types.h (ssize_t): Defined as int as opposed to long.

	Thanks to bvassche for the report.

2011-05-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct checking for short option matches in getopt_long_only().

	* mingwex/getopt.c (getopt_verify): New static inline function.
	(getopt_parse) [getopt_mode_long_only]: Use it, to validate as a
	possible short option match after failing to match, or ambiguously
	matching as a long option.

2011-05-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/stdlib.h (strtod): Declare as extern to resolve compilation issues.

	Thanks to cgf for the report.

2011-05-23  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/time.h (daylight, timezone, tzname): Rework guards to expose when
	compiles with __STRICT_ANSI__.

	Thanks to Felipe Contreras for the report.

2011-05-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/stdlib.h (strtod): Remove possible static declaration to resolve
	issue with gcc.

	Thanks to Tobias Burnus for the report.

2011-05-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/stdlib.h (_rotl, _lrotl, _rotr, _lrotr): Resolve conflict with gcc
	by wrapping the functions in brackets.

	Thanks to Kai Tietz for the report.
